--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 appdirs==1.4.4
 asgiref==3.5.1
+attrs==21.4.0
 distlib==0.3.2
 dj-database-url==0.5.0
 Django==4.0.4
+django-crispy-forms==1.14.0
 django-heroku==0.3.1
+django-polls @ file:///G:/Programming/Web_Development/Django/DjangoProjects/poll/django-polls/dist/django-polls-0.1.tar.gz
 filelock==3.0.12
 gunicorn==20.1.0
+jsonschema==4.5.1
+numpy==1.20.3
 psycopg2==2.9.3
+pyproject-toml==0.0.10
+pyrsistent==0.18.1
 six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
 tzdata==2022.1
 virtualenv==20.4.7
 virtualenvwrapper-win==1.2.6
 whitenoise==6.1.0
-crispy_forms==1.14.0
